# idcnn_pii

./: .gitignore  CODEX_HANDOFF.md  Experiment.md  README.md  configs.yaml  pyproject.toml
data/raw/: .gitkeep
docs/superpowers/plans/: 2026-06-19-cascade-pointer-head.md  2026-06-19-egp-drop-penalty.md  2026-06-20-nas-idcnn-search.md  2026-06-20-pytorch-cu128-environment.md  2026-06-20-result-reporting.md
docs/superpowers/specs/: 2026-06-19-cascade-pointer-head-design.md  2026-06-19-egp-drop-penalty-design.md  2026-06-20-nas-idcnn-search-design.md  2026-06-20-result-reporting-design.md
scripts/: build_nas_result_tables.py  evaluate_nas_all_candidates.py  evaluate_nas_pareto.py  plot_results.py  prepare_data.py  profile_model_complexity.py  profile_nas_onnx_latency.py  profile_onnx_complexity.py  run_experiments.py  run_nas_search.py  summarize_results.py
src/: data.py  evaluate.py  heads.py  model_idcnn.py  model_nas_idcnn.py  nas_archive.py  nas_encoding.py  nas_train.py  nsga2.py  train.py  utils.py
tests/: test_build_nas_result_tables.py  test_data.py  test_evaluate_nas_all_candidates.py  test_evaluate_nas_pareto.py  test_heads.py  test_model_idcnn.py  test_model_nas_idcnn.py  test_nas_archive.py  test_nas_encoding.py  test_nas_search.py  test_nas_train.py  test_nsga2.py  test_profile_model_complexity.py  test_profile_nas_onnx_latency.py  test_profile_onnx_complexity.py  test_reporting.py  test_train.py
