[project]
name = "idcnn-pii"
version = "0.1.0"
description = "IDCNN Chinese PII recognition experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.11.0",
    "numpy",
    "pyyaml",
    "tqdm",
    "pandas",
    "scikit-learn",
    "matplotlib>=3.10.9",
    "onnx>=1.22.0",
    "onnxruntime>=1.24.3",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
